bugid:8300 overflow on h2 was removed as part of a fix for bugid:5557. 5557 has been rolled back but this changed was missed
git-svn-id: svn+ssh://svn.wikia-code.com/svn/wikia/trunk@39113 e846bd91-c042-42a7-a218-4b65e2c1904d

--- a/skins/oasis/css/core/_article.scss
+++ b/skins/oasis/css/core/_article.scss
@@ -14,7 +14,7 @@
 		border-bottom: solid 1px $color-headline-border;
 		font-size: 18px;
 		margin-top: 14px;
-		*overflow: hidden;
+		overflow: hidden;
 	}
 	h3 {
 		font-size: 16px;
